# sagittarius

./: .gitignore  README.md  manage.py  pyproject.toml
sagittarius/core/: apps.py  models.py
sagittarius/core/migrations/: 0001_initial.py
sagittarius/judge/: apps.py  models.py
sagittarius/judge/migrations/: 0001_initial.py
sagittarius/organize/: apps.py  models.py
sagittarius/organize/migrations/: 0001_initial.py
sagittarius/project/: asgi.py  settings.py
sagittarius/rules/: apps.py  models.py
sagittarius/rules/migrations/: 0001_initial.py
