[tool.poetry]
name = "sagittarius"
version = "0.1.0"
description = "Horseback archery competition open source manager"
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-countries = "*"
django-ordered-model = "^3.7"


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
django-extensions = "*"
django-debug-toolbar = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]

ignore = ["E501"]
